--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+ <html>
   <head>
     <title> San Francisco Eateries </title>
+    <link rel= "stylesheet" type="text/css" href="index.css">
   </head>
+</html>
   
   
     
