--- a/Contact.html
+++ b/Contact.html
@@ -16,10 +16,12 @@
     Your e-mail<br>
     <input type="text" name="cf_email"><br>
     Message<br>
+    <input type="text" name="cf_message"><br>
     <input type="submit" value="Send">
     <input type="reset" value="Clear">
 </form>
 </div>
+
 
   
     
