--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <title> San Francisco Eateries </title>
     <link rel= "stylesheet" type="text/css" href="index.css">
   </head>
+
+  <body>
+   <div class="header">
+    <a href="contact.html">
+     <p> Contact Us! </p>
+    </a>
+   </div>
+  </body>
+  
+  
 </html>
   
   
