--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   </head>
 
   <body>
+      <h1>Welcome to SF-Snackin'</h1>
+      <h1>ENJOY!</h1>
    <div class="header">
-    <a href="contact.html">
-     <p> Contact Us! </p>
-    </a>
+    <a href="contact.html"><p> Contact Us! </p></a>
+    <a href="about.html"><p> About Us! </p></a>
    </div>
   </body>
   
