new stuff, updated most of the files to standard toolbar, etc.

--- a/breakfast.html
+++ b/breakfast.html
@@ -8,7 +8,8 @@
     <body>
         <div class="navbar">
             <a href="index.html" class= "navbar-item nav-button">Home</a>
-             <a href="about.html" class= "navbar-item nav-button">About Us</a>
+            <a href="breakfast.html" class= "navbar-item nav-button">Breakfast</a> 
+            <a href="about.html" class= "navbar-item nav-button">About Us</a>
             <a href="contact.html"class= "nav-item nav-button">Contact</a>
         </div>
 
