--- a/dinner.html
+++ b/dinner.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dinner</title>
-    </head>
-    
+            <title> Dinner </title>
+            <link rel="stylesheet" type="text/css" href="dinner.css">
+    </head> 
+
     <body>
-        
+        <div class="navbar">
+            <a href="index.html" class= "navbar-item nav-button">Home</a>
+            <a href="breakfast.html" class= "navbar-item nav-button">Breakfast</a>
+            <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink</a>
+            <a href="about.html" class= "navbar-item nav-button">About Us</a>
+            <a href="contact.html"class= "nav-item nav-button">Contact</a>
+        </div>
+
+        <div class="heading">
+            <h1>SF Snackin'</h1>
+            <p>Dinner</p>
+        </div>
+            <div class="parallax"></div>
+
+            <div style="height:1000px;background-color:red;font-size:36px">
+            This div is just here to enable scrolling.
+            Tip: Try to remove the background-attachment property to remove the scrolling effect.
+            </div>
+                <div class="parallax"></div>
     </body>
 </html>
