--- a/index.html
+++ b/index.html
@@ -15,21 +15,16 @@
   </head>
 
   <body>
-<<<<<<< HEAD
+
       <h1>Welcome to SF-Snackin'</h1>
       <h1>ENJOY!</h1>
-   
-    <a href="contact.html" ><p> Contact Us! </p></a>
-    <a href="about.html"><p> About Us! </p></a>
-   
-  </body>
   
   
-=======
    <div class="navbar">
     <a href="index.html" class= "navbar-item nav-button">Home</a>
     <a href="breakfast.html"class= "nav-item nav-button">Breakfast</a>
     <a href="dinner.html"class= "nav-item nav-button">Dinner</a>
+    <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink</a>
     <a href="contact.html"class= "nav-item nav-button">Contact</a>
     <a href="about.html" class= "navbar-item nav-button">About Us</a>
    </div>
@@ -66,7 +61,6 @@
      <div class="col-xs-4"> map</div>
       
     </body>
->>>>>>> emyee19/master
 </html>
   
   
