--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
+
     <head>
         <title>San Francisco Snackin' </title>
         <link rel= "stylesheet" type="text/css" href="contact.css">
     </head>  
         <body>
+                <div class="navbar">
+                <a href="index.html" class= "navbar-item nav-button">Home</a>
+                <a href="breakfast.html" class= "navbar-item nav-button">Breakfast</a>
+                <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink</a>
+                <a href="about.html" class= "navbar-item nav-button">About Us</a>
+                <a href="contact.html"class= "nav-item nav-button">Contact</a>
+                </div>
+
+                <div class="heading">
+                    <h1>SF Snackin'</h1>
+                </div>
                 <div class="container">
                 <form action="contact.php" method="post">
                 Your name<br>
@@ -18,42 +29,6 @@
                 <input type="reset" value="Clear">
                 </form>
             </div>
-            <a href="index.html"><p> GO BACK! </p></a>
         </body>
-=======
-
-<head>
-    <title>San Francisco Snackin' </title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-    
-<body>
-
-<ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="breakfast.html">Breakfast</a></li>
-  <li><a href="contact.html">Contact</a></li>
-  <li><a href="about.html">About</a></li>
-</ul>
-  
-<div class="container">
-<form action="contact.php" method="post">
-    Your name<br>
-    <input type="text" name="cf_name"><br>
-    Your e-mail<br>
-    <input type="text" name="cf_email"><br>
-    Message<br>
-    <input type="text" name="cf_message"><br>
-    <input type="submit" value="Send">
-    <input type="reset" value="Clear">
-</form>
-</div>
-
-
-  
-    
-</body>
-
-
->>>>>>> emyee19/master
 </html>
+
