--- a/breakfast.html
+++ b/breakfast.html
@@ -6,14 +6,14 @@
     </head> 
 
     <body>
-        <div class="navbar">
+            <div class="navbar">
             <a href="index.html" class= "navbar-item nav-button">Home</a>
-            <a href="breakfast.html" class= "navbar-item nav-button">Breakfast</a> 
+            <a href="breakfast.html"class= "nav-item nav-button">Breakfast</a>
+            <a href="dinner.html"class= "nav-item nav-button">Dinner</a>
             <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink</a>
-             <a href="dinner.html"class= "nav-item nav-button">Dinner</a>
-            <a href="about.html" class= "navbar-item nav-button">About Us</a>
             <a href="contact.html"class= "nav-item nav-button">Contact</a>
-        </div>
+            <a href="about.html" class= "navbar-item nav-button">About Us</a>
+           </div>
 
         <div class="heading">
             <h1>SF Snackin'</h1>
