--- a/views.html
+++ b/views.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <title> Dinner </title>
-            <link rel="stylesheet" type="text/css" href="dinner.css">
+            <title> Views </title>
+            <link rel="stylesheet" type="text/css" href="views.css">
     </head> 
 
     <body>
-           <div class="navbar">
+            <div class="navbar">
             <a href="index.html" class= "navbar-item nav-button">Home </a>
             <a href="breakfast.html"class= "nav-item nav-button">Breakfast </a>
             <a href="dinner.html"class= "nav-item nav-button">Dinner </a>
@@ -18,11 +18,11 @@
 
         <div class="heading">
             <h1>SF Snackin'</h1>
-            <h1>Dinner</h1>
+            <h1>Our Favorite Views of The City</h1>
         </div>
             <div class="parallax"></div>
 
-            <div style="height:1000px;background-color:red;font-size:36px">
+            <div style="height:500px;background-color:red;font-size:36px">
             This div is just here to enable scrolling.
             Tip: Try to remove the background-attachment property to remove the scrolling effect.
             </div>
