--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
             <a href="breakfast.html"class= "nav-item nav-button">Breakfast</a>
             <a href="dinner.html"class= "nav-item nav-button">Dinner</a>
             <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink</a>
+            <a href="views.html"class= "nav-item nav-button">Views</a>
             <a href="contact.html"class= "nav-item nav-button">Contact</a>
             <a href="about.html" class= "navbar-item nav-button">About Us</a>
            </div>
