--- a/breakfast.html
+++ b/breakfast.html
@@ -7,21 +7,22 @@
 
     <body>
             <div class="navbar">
-            <a href="index.html" class= "navbar-item nav-button">Home</a>
-            <a href="breakfast.html"class= "nav-item nav-button">Breakfast</a>
-            <a href="dinner.html"class= "nav-item nav-button">Dinner</a>
-            <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink</a>
-            <a href="contact.html"class= "nav-item nav-button">Contact</a>
-            <a href="about.html" class= "navbar-item nav-button">About Us</a>
+            <a href="index.html" class= "navbar-item nav-button">Home </a>
+            <a href="breakfast.html"class= "nav-item nav-button">Breakfast </a>
+            <a href="dinner.html"class= "nav-item nav-button">Dinner </a>
+            <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink </a>
+            <a href="views.html"class= "nav-item nav-button">Views </a>
+            <a href="contact.html"class= "nav-item nav-button">Contact </a>
+            <a href="about.html" class= "navbar-item nav-button">About Us </a>
            </div>
 
         <div class="heading">
             <h1>SF Snackin'</h1>
-            <p>Breakfast & Brunch</p>
+            <h1>Breakfast & Brunch</h1>
         </div>
             <div class="parallax"></div>
 
-            <div style="height:1000px;background-color:red;font-size:36px">
+            <div style="height:500px;background-color:red;font-size:36px">
             This div is just here to enable scrolling.
             Tip: Try to remove the background-attachment property to remove the scrolling effect.
             </div>
