--- a/dessertndrink.html
+++ b/dessertndrink.html
@@ -7,16 +7,17 @@
 
     <body>
                 <div class="navbar">
-                <a href="index.html" class= "navbar-item nav-button">Home</a>
-                <a href="breakfast.html"class= "nav-item nav-button">Breakfast</a>
-                <a href="dinner.html"class= "nav-item nav-button">Dinner</a>
-                <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink</a>
-                <a href="contact.html"class= "nav-item nav-button">Contact</a>
+                <a href="index.html" class= "navbar-item nav-button">Home </a>
+                <a href="breakfast.html"class= "nav-item nav-button">Breakfast </a>
+                <a href="dinner.html"class= "nav-item nav-button">Dinner </a>
+                <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink </a>
+                <a href="views.html"class= "nav-item nav-button">Views </a>
+                <a href="contact.html"class= "nav-item nav-button">Contact </a>
                 <a href="about.html" class= "navbar-item nav-button">About Us</a>
                </div>
         <div class="heading">
             <h1>SF Snackin'</h1>
-            <p>Dessert and Drinks</p>
+            <h1>Dessert and Drinks</h1>
         </div>
             <div class="parallax"></div>
 
