--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 
   <body>
             <div class="navbar">
-            <a href="index.html" class= "navbar-item nav-button">Home</a>
-            <a href="breakfast.html"class= "nav-item nav-button">Breakfast</a>
-            <a href="dinner.html"class= "nav-item nav-button">Dinner</a>
-            <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink</a>
-            <a href="contact.html"class= "nav-item nav-button">Contact</a>
+            <a href="index.html" class= "navbar-item nav-button">Home </a>
+            <a href="breakfast.html"class= "nav-item nav-button">Breakfast </a>
+            <a href="dinner.html"class= "nav-item nav-button">Dinner </a>
+            <a href="dessertndrink.html" class= "navbar-item nav-button">Dessert&Drink </a>
+            <a href="views.html"class= "nav-item nav-button">Views </a>
+            <a href="contact.html"class= "nav-item nav-button">Contact </a>
             <a href="about.html" class= "navbar-item nav-button">About Us</a>
            </div>
       <h1>Welcome to SF-Snackin'</h1>
